# content-strategist

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
agents/: __init__.py  analyzer.py  schemas.py  searchcalls.py
api/: dependencies.py  main.py  models.py
api/routes/: health.py  strategy.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/landing/: FeatureCards.jsx  Hero.jsx  HowItWorks.jsx  InputForm.jsx
frontend/src/components/results/: SuccessBanner.jsx  TabNav.jsx  TopBar.jsx
frontend/src/components/results/tabs/: CouncilorNotes.jsx  GapAnalysis.jsx  PostPrompts.jsx  StrategicReport.jsx
frontend/src/components/shared/: Card.jsx  HandleChip.jsx  ProgressStepper.jsx  TrendPill.jsx
frontend/src/hooks/: useRegenerate.js  useStrategy.js
orchestrator/: __init__.py  graph.py  state.py
tools/: __init__.py  apify.py  cache.py  gemini_client.py  serp.py
